[package]
name = "document-uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
dirs = "5.0.1"
eframe = "0.25.0"
egui = "0.25.0"
futures = "0.3.30"
google-drive3 = "5.0.3"
notify-rust = "4.10.0"
open = "5.0.1"
rfd = "0.12.1"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
